compiler/testData/multiplatform/classScopes/functionIncorrectSignatureFromSuperclass/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/classScopes/functionIncorrectSignatureFromSuperclass/common.kt:1:1: warning: the expect/actual classes (including interfaces, objects, annotations, enums, actual typealiases) are an experimental feature. You can use -Xexpect-actual-classes flag to suppress this warning.
expect class Foo {
^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/classScopes/functionIncorrectSignatureFromSuperclass/jvm.kt:5:14: error: actual class 'Foo' has no corresponding members for expected class members:

    public final expect fun function(b: ByteArray): Int

    The following declaration is incompatible because return type is different:
        public final fun function(b: ByteArray): Long

actual class Foo : Base()
             ^
